<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="clear_sign">C</string>
    <string name="percent_unicode">%</string>
    <string name="divide_unicode">÷</string>
    <string name="multiply_unicode">×</string>
    <string name="minos_unicode">−</string>
    <string name="addition_unicode">+</string>
    <string name="equal_unicode">=</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="select_currency">Select Currency</string>
    <string name="cancel">Cancel</string>

    <string name="equal_place_holder">= %s</string>

</resources>